Fixed overflow on narrow viewports issue #378
List numbers overflow on mobile devices #378

--- a/src/_css/main.css
+++ b/src/_css/main.css
@@ -475,7 +475,7 @@ dark-mode-toggle {
 
 @media (max-width: 770px) {
   :root {
-    --offset: 10px;
+    --offset: 12px;
   }
   body {
     padding: 0;
